force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
.THIS.slvi-container {
    padding-top: 17px;
    margin-bottom: 30px;
}

.THIS .slvi-section + .slvi-section {
    border-top: 1px solid #F2F2F2;
}

.THIS .slvi-top-container {
    height: 100px;
    padding-left: 17px;
    padding-right: 17px;
}

.THIS .slvi-top-container-hcp {
    padding-left: 17px;
    padding-right: 17px;
}


.THIS .slvi-name-section,
.THIS .slvi-objective-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.THIS .study-name {
    /*text-overflow: ellipsis;*/
    /*white-space: nowrap;*/
    overflow: hidden;
}

.THIS .study-name a {
    text-decoration: none;
    /*height: 30px;*/
    color: #297DFD;
    font-size: 24px;
    font-weight: 500;
    line-height: 30px;
}

.THIS .slvi-status {
    white-space: nowrap;
    padding: 0 5px;
    margin-left: 10px;
    flex-shrink: 0;
}

.THIS .slvi-objective-section .objective-text {
    height: 16px;
    color: #333333;
    font-size: 13px;
    line-height: 16px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

.THIS .slvi-objective-section .objective-link {
    white-space: nowrap;
    margin-left: 10px;
    flex-shrink: 0;
}

.THIS .slvi-objective-sectionxxx .objective-link a {
    text-decoration: none;
    color: #297DFD;
    font-size: 13px;
    font-weight: 500;
    line-height: 16px;
}

.THIS .sponsor-name {
    height: 20px;
    color: #999999;
    font-family: "Proxima Nova";
    margin-bottom: 5px;
    font-size: 12px;
    line-height: 20px;
}

.THIS .slvi-top-container .study-options {
    float: right;
    height: 18px;
    width: auto;
    text-align: center;
    color: white;
    font-size: 10px;
    line-height: 10px;
}

.THIS .slvi-top-container .study-options span {
    float: right;
}

.THIS .slvi-top-container .study-options div {
    padding: 0.2rem;
    float: right;
}

/* --------------------------------------------------------- Buttons: --------------------------------------------------  */
.THIS .slvi-btn {
    text-align: center;
    color: #297DFD;
    padding-top: 10px;
    padding-bottom: 10px;
    border-collapse: collapse;
    flex-basis: 0;
}


.THIS .slvi-btn + .slvi-btn {
    border-left: 1px solid #F2F2F2;
}


.THIS .slvi-btn.disabled {
    pointer-events: none;
    opacity: 0.4;
    cursor: not-allowed;
}

.THIS .slvi-btn .rr-icon-default {
    height: 24px;
    width: 20px;
    margin: auto;
    fill: #297DFD;
}

.THIS .slvi-btn .btn-content {
    display: flex;
    flex-flow: column;
    user-select: none;
    position: relative;
}

.THIS .slvi-btn .btn-content:active {
    top: 1px;
}


.THIS .slvi-btn:hover {
    cursor: pointer;
    background-color: #F8F9FB;
}

.THIS .slvi-btn:active {
    /*box-shadow: inset 0 0 7px rgba(0,0,0,0.25);*/
    box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.35);
}

.THIS .slvi-btn:first-child {
    border-bottom-left-radius: 5px;
}

.THIS .slvi-btn:last-child {
    border-bottom-right-radius: 5px;
}

.THIS .btn-wrapper {
    flex-basis: 0;
}

.THIS .btn-wrapper.disabled {
    cursor: not-allowed;
}

.THIS .rr-link {
    color: #297DFD;
    display: inline-flex;
    align-items: center;
}

.THIS .rr-link {
    text-decoration: none;
}

.THIS .rr-link svg {
    fill: #297DFD;
    width: 14px;
    height: 14px;
}

.THIS .clinic-name {
    color: #000000;
    font-family: "Proxima Nova";
    font-size: 15px;
    font-weight: 500;
    line-height: 18px;
}

.THIS .site-sub-header {
    color: #999999;
    font-family: "Proxima Nova";
    font-size: 14px;
    line-height: 17px;
}

.THIS .site-address {
    color: #333333;
    font-family: "Proxima Nova";
    font-size: 13px;
    line-height: 16px;
}

.THIS .rr-link.expanded-icon .rr-icon-default {
    transform-origin: center;
    transition: 0.3s ease-in-out;
    transform: rotate(90deg);
    position: relative;
    top: -1px;
    margin-right: 3px;
}

.THIS .rr-link.hidden-icon .rr-icon-default {
    transform: rotate(0deg);
}

.THIS .rr-blue-color {
    color: #297DFD;
}

.THIS .slvi-status-item {
    /*text-align: right; */
    font-size: 14px;
    color: #666666;
}

@media (max-width: 768px) {
    .THIS .slvi-buttons {
        flex-direction: column;
    }

    .THIS .slvi-buttons .btn-wrapper {
        flex: 0;
    }

    .THIS .slvi-buttons .slvi-btn + .slvi-btn {
        border-top: 1px solid #F2F2F2;
    }

}

.THIS .slvi-status-icon {
    height: 20px;
}

.THIS .green-icon {
    fill: #55C200;
}

.THIS .orange-icon {
    fill: #FF9301;
}

.THIS .red-icon {
    fill: #E20000;
}

.THIS .blue-icon {
    fill: #005587;
}

@media all and (min-width: 768px) {
    .THIS .slvi-padded-panel-left {
        padding-left: 9rem;
        padding-right: 1rem;
        text-align: right;
    }

    .THIS .slvi-padded-panel-right {
        padding-right: 9rem;
    }
}

@media all and (max-width: 767px) {
    .THIS .slvi-header-item + .slvi-header-item {
        margin-top: 16px;
    }

    .THIS .site-distance {
        margin-top: .5rem;
    }

    .THIS .rri-icon svg {
        height: 16px;
        width: 13px;
    }

    .THIS .rri-icon span {
        margin: .125rem !important;
    }
}

@media all and (min-width: 768px) {
    .THIS .site-distance {
        text-align: right;
    }

    .THIS .slvi-top-container-hcp {
        height: 100px;
    }
}

.THIS .slvi-search-site-btn {
    width: 100%;
}

.THIS .slvi-site-btn {
    width: 100%;
}

